--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: DIGA Blog
 
     github_username: dipudk29
 
-    theme: jekyll-theme-tactile
+    theme: minima
 
     url: 'https://dipudk29.github.io'
 
